go/goParser.java
// Generated from java-escape by ANTLR 4.11.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class goParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.11.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, T__43=44, T__44=45, 
		T__45=46, T__46=47, T__47=48, T__48=49, T__49=50, T__50=51, T__51=52, 
		T__52=53, T__53=54, T__54=55, T__55=56, T__56=57, T__57=58, T__58=59, 
		T__59=60, T__60=61, T__61=62, T__62=63, T__63=64, T__64=65, T__65=66, 
		T__66=67, T__67=68, T__68=69, T__69=70, T__70=71, T__71=72, T__72=73, 
		T__73=74, T__74=75, T__75=76, T__76=77, T__77=78, T__78=79, T__79=80, 
		T__80=81, FLOAT=82, STRING=83, NAME=84, INT=85, UNSIGNEDINT=86, WS=87, 
		NOTE=88, NOTE2=89;
	public static final int
		RULE_golang = 0, RULE_package = 1, RULE_packageName = 2, RULE_imports = 3, 
		RULE_importPackage = 4, RULE_dependencyPackage = 5, RULE_globalVars = 6, 
		RULE_globalVarsDeclaration = 7, RULE_globalBasicVarDeclaration = 8, RULE_globalVarsAssignment = 9, 
		RULE_basicVarsDeclaration = 10, RULE_varName = 11, RULE_structDeclaration = 12, 
		RULE_structName = 13, RULE_funcDeclaration = 14, RULE_functionName = 15, 
		RULE_interfaceDeclaration = 16, RULE_interfaceName = 17, RULE_name = 18, 
		RULE_funcs = 19, RULE_func = 20, RULE_fromStruct = 21, RULE_parameterList = 22, 
		RULE_parameter = 23, RULE_returnTypes = 24, RULE_parameterTypes = 25, 
		RULE_compoundTypes = 26, RULE_arraySize = 27, RULE_basicTypes = 28, RULE_functionBody = 29, 
		RULE_localVarsDeclaration = 30, RULE_assignmentStatement = 31, RULE_computationalStatement = 32, 
		RULE_callFunctionName = 33, RULE_callFunctionparameters = 34, RULE_assignmentOperator = 35, 
		RULE_arithOperator = 36, RULE_bitOperator = 37, RULE_conditionalStatement = 38, 
		RULE_ifConditionalStatement = 39, RULE_ifCondition = 40, RULE_ifConditionBody = 41, 
		RULE_switchConditionalStatement = 42, RULE_switchCondition = 43, RULE_switchCaseClause = 44, 
		RULE_caseCondition = 45, RULE_caseConditionBody = 46, RULE_selectconditionalStatement = 47, 
		RULE_selectCaseClause = 48, RULE_loopStatement = 49, RULE_loopBody = 50, 
		RULE_forFlag = 51, RULE_forConditionClause = 52, RULE_init = 53, RULE_forCondition = 54, 
		RULE_post = 55, RULE_returnStatement = 56, RULE_callFunctionStatement = 57, 
		RULE_varValue = 58, RULE_staticValue = 59, RULE_array = 60;
	private static String[] makeRuleNames() {
		return new String[] {
			"golang", "package", "packageName", "imports", "importPackage", "dependencyPackage", 
			"globalVars", "globalVarsDeclaration", "globalBasicVarDeclaration", "globalVarsAssignment", 
			"basicVarsDeclaration", "varName", "structDeclaration", "structName", 
			"funcDeclaration", "functionName", "interfaceDeclaration", "interfaceName", 
			"name", "funcs", "func", "fromStruct", "parameterList", "parameter", 
			"returnTypes", "parameterTypes", "compoundTypes", "arraySize", "basicTypes", 
			"functionBody", "localVarsDeclaration", "assignmentStatement", "computationalStatement", 
			"callFunctionName", "callFunctionparameters", "assignmentOperator", "arithOperator", 
			"bitOperator", "conditionalStatement", "ifConditionalStatement", "ifCondition", 
			"ifConditionBody", "switchConditionalStatement", "switchCondition", "switchCaseClause", 
			"caseCondition", "caseConditionBody", "selectconditionalStatement", "selectCaseClause", 
			"loopStatement", "loopBody", "forFlag", "forConditionClause", "init", 
			"forCondition", "post", "returnStatement", "callFunctionStatement", "varValue", 
			"staticValue", "array"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'package'", "'import'", "'('", "')'", "'var'", "'='", "','", "'type'", 
			"'struct'", "'{'", "'}'", "'func'", "'interface'", "'*'", "'['", "'...'", 
			"']'", "'[]'", "'map'", "'string'", "'bool'", "'int'", "'int8'", "'int16'", 
			"'int32'", "'int64'", "'uint'", "'uint8'", "'uint16'", "'uint32'", "'uint64'", 
			"'byte'", "'uintptr'", "'rune'", "'float32'", "'float64'", "'complex64'", 
			"'complex128'", "'error'", "'.'", "'-'", "'+'", "'++'", "'--'", "'&'", 
			"'!'", "'/'", "'%'", "'<<'", "'>>'", "'<'", "'<='", "'>'", "'>='", "'=='", 
			"'!='", "'^'", "'|'", "'&&'", "'||'", "':='", "'if'", "'else if'", "'else'", 
			"'switch'", "'case'", "':'", "'default'", "'select'", "'<-'", "'for'", 
			"'break'", "'continue'", "'goto'", "';'", "'range'", "'return'", "'true'", 
			"'false'", "'iota'", "'nil'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, "FLOAT", 
			"STRING", "NAME", "INT", "UNSIGNEDINT", "WS", "NOTE", "NOTE2"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "java-escape"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public goParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class GolangContext extends ParserRuleContext {
		public PackageContext package_() {
			return getRuleContext(PackageContext.class,0);
		}
		public ImportsContext imports() {
			return getRuleContext(ImportsContext.class,0);
		}
		public GlobalVarsContext globalVars() {
			return getRuleContext(GlobalVarsContext.class,0);
		}
		public FuncsContext funcs() {
			return getRuleContext(FuncsContext.class,0);
		}
		public GolangContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_golang; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof goListener ) ((goListener)listener).enterGolang(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof goListener ) ((goListener)listener).exitGolang(this);
		}
	}

	public final GolangContext golang() throws RecognitionException {
		GolangContext _localctx = new GolangContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_golang);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(122);
			package_();
			setState(123);
			imports();
			setState(124);
			globalVars();
			setState(125);
			funcs();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PackageContext extends ParserRuleContext {
		public PackageNameContext packageName() {
			return getRuleContext(PackageNameContext.class,0);
		}
		public PackageContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_package; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof goListener ) ((goListener)listener).enterPackage(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof goListener ) ((goListener)listener).exitPackage(this);
		}
	}

	public final PackageContext package_() throws RecognitionException {
		PackageContext _localctx = new PackageContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_package);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(127);
			match(T__0);
			setState(128);
			packageName();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PackageNameContext extends ParserRuleContext {
		public TerminalNode NAME() { return getToken(goParser.NAME, 0); }
		public PackageNameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_packageName; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof goListener ) ((goListener)listener).enterPackageName(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof goListener ) ((goListener)listener).exitPackageName(this);
		}
	}

	public final PackageNameContext packageName() throws RecognitionException {
		PackageNameContext _localctx = new PackageNameContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_packageName);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(130);
			match(NAME);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ImportsContext extends ParserRuleContext {
		public List<ImportPackageContext> importPackage() {
			return getRuleContexts(ImportPackageContext.class);
		}
		public ImportPackageContext importPackage(int i) {
			return getRuleContext(ImportPackageContext.class,i);
		}
		public List<DependencyPackageContext> dependencyPackage() {
			return getRuleContexts(DependencyPackageContext.class);
		}
		public DependencyPackageContext dependencyPackage(int i) {
			return getRuleContext(DependencyPackageContext.class,i);
		}
		public ImportsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_imports; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof goListener ) ((goListener)listener).enterImports(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof goListener ) ((goListener)listener).exitImports(this);
		}
	}

	public final ImportsContext imports() throws RecognitionException {
		ImportsContext _localctx = new ImportsContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_imports);
		int _la;
		try {
			setState(147);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(135);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__1) {
					{
					{
					setState(132);
					importPackage();
					}
					}
					setState(137);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(138);
				match(T__1);
				setState(139);
				match(T__2);
				setState(141); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(140);
					dependencyPackage();
					}
					}
					setState(143); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==STRING );
				setState(145);
				match(T__3);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ImportPackageContext extends ParserRuleContext {
		public DependencyPackageContext dependencyPackage() {
			return getRuleContext(DependencyPackageContext.class,0);
		}
		public ImportPackageContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_importPackage; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof goListener ) ((goListener)listener).enterImportPackage(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof goListener ) ((goListener)listener).exitImportPackage(this);
		}
	}

	public final ImportPackageContext importPackage() throws RecognitionException {
		ImportPackageContext _localctx = new ImportPackageContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_importPackage);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(149);
			match(T__1);
			setState(150);
			dependencyPackage();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DependencyPackageContext extends ParserRuleContext {
		public TerminalNode STRING() { return getToken(goParser.STRING, 0); }
		public DependencyPackageContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dependencyPackage; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof goListener ) ((goListener)listener).enterDependencyPackage(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof goListener ) ((goListener)listener).exitDependencyPackage(this);
		}
	}

	public final DependencyPackageContext dependencyPackage() throws RecognitionException {
		DependencyPackageContext _localctx = new DependencyPackageContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_dependencyPackage);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(152);
			match(STRING);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class GlobalVarsContext extends ParserRuleContext {
		public List<GlobalVarsDeclarationContext> globalVarsDeclaration() {
			return getRuleContexts(GlobalVarsDeclarationContext.class);
		}
		public GlobalVarsDeclarationContext globalVarsDeclaration(int i) {
			return getRuleContext(GlobalVarsDeclarationContext.class,i);
		}
		public List<GlobalVarsAssignmentContext> globalVarsAssignment() {
			return getRuleContexts(GlobalVarsAssignmentContext.class);
		}
		public GlobalVarsAssignmentContext globalVarsAssignment(int i) {
			return getRuleContext(GlobalVarsAssignmentContext.class,i);
		}
		public GlobalVarsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_globalVars; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof goListener ) ((goListener)listener).enterGlobalVars(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof goListener ) ((goListener)listener).exitGlobalVars(this);
		}
	}

	public final GlobalVarsContext globalVars() throws RecognitionException {
		GlobalVarsContext _localctx = new GlobalVarsContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_globalVars);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(158);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__4 || _la==T__7) {
				{
				setState(156);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
				case 1:
					{
					setState(154);
					globalVarsDeclaration();
					}
					break;
				case 2:
					{
					setState(155);
					globalVarsAssignment();
					}
					break;
				}
				}
				setState(160);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class GlobalVarsDeclarationContext extends ParserRuleContext {
		public GlobalBasicVarDeclarationContext globalBasicVarDeclaration() {
			return getRuleContext(GlobalBasicVarDeclarationContext.class,0);
		}
		public StructDeclarationContext structDeclaration() {
			return getRuleContext(StructDeclarationContext.class,0);
		}
		public FuncDeclarationContext funcDeclaration() {
			return getRuleContext(FuncDeclarationContext.class,0);
		}
		public InterfaceDeclarationContext interfaceDeclaration() {
			return getRuleContext(InterfaceDeclarationContext.class,0);
		}
		public GlobalVarsDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_globalVarsDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof goListener ) ((goListener)listener).enterGlobalVarsDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof goListener ) ((goListener)listener).exitGlobalVarsDeclaration(this);
		}
	}

	public final GlobalVarsDeclarationContext globalVarsDeclaration() throws RecognitionException {
		GlobalVarsDeclarationContext _localctx = new GlobalVarsDeclarationContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_globalVarsDeclaration);
		try {
			setState(165);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(161);
				globalBasicVarDeclaration();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(162);
				structDeclaration();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(163);
				funcDeclaration();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(164);
				interfaceDeclaration();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class GlobalBasicVarDeclarationContext extends ParserRuleContext {
		public BasicVarsDeclarationContext basicVarsDeclaration() {
			return getRuleContext(BasicVarsDeclarationContext.class,0);
		}
		public GlobalBasicVarDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_globalBasicVarDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof goListener ) ((goListener)listener).enterGlobalBasicVarDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof goListener ) ((goListener)listener).exitGlobalBasicVarDeclaration(this);
		}
	}

	public final GlobalBasicVarDeclarationContext globalBasicVarDeclaration() throws RecognitionException {
		GlobalBasicVarDeclarationContext _localctx = new GlobalBasicVarDeclarationContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_globalBasicVarDeclaration);
		try {
			setState(174);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(167);
				match(T__4);
				setState(168);
				basicVarsDeclaration();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(169);
				match(T__4);
				setState(170);
				match(T__2);
				setState(171);
				basicVarsDeclaration();
				setState(172);
				match(T__3);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class GlobalVarsAssignmentContext extends ParserRuleContext {
		public GlobalBasicVarDeclarationContext globalBasicVarDeclaration() {
			return getRuleContext(GlobalBasicVarDeclarationContext.class,0);
		}
		public List<VarValueContext> varValue() {
			return getRuleContexts(VarValueContext.class);
		}
		public VarValueContext varValue(int i) {
			return getRuleContext(VarValueContext.class,i);
		}
		public List<VarNameContext> varName() {
			return getRuleContexts(VarNameContext.class);
		}
		public VarNameContext varName(int i) {
			return getRuleContext(VarNameContext.class,i);
		}
		public CompoundTypesContext compoundTypes() {
			return getRuleContext(CompoundTypesContext.class,0);
		}
		public ArrayContext array() {
			return getRuleContext(ArrayContext.class,0);
		}
		public GlobalVarsAssignmentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_globalVarsAssignment; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof goListener ) ((goListener)listener).enterGlobalVarsAssignment(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof goListener ) ((goListener)listener).exitGlobalVarsAssignment(this);
		}
	}

	public final GlobalVarsAssignmentContext globalVarsAssignment() throws RecognitionException {
		GlobalVarsAssignmentContext _localctx = new GlobalVarsAssignmentContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_globalVarsAssignment);
		int _la;
		try {
			setState(210);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,10,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(176);
				globalBasicVarDeclaration();
				setState(177);
				match(T__5);
				{
				setState(178);
				varValue();
				setState(183);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__6) {
					{
					{
					setState(179);
					match(T__6);
					setState(180);
					varValue();
					}
					}
					setState(185);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(186);
				match(T__4);
				setState(187);
				varName();
				setState(192);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__6) {
					{
					{
					setState(188);
					match(T__6);
					setState(189);
					varName();
					}
					}
					setState(194);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(195);
				match(T__5);
				{
				setState(196);
				varValue();
				setState(201);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__6) {
					{
					{
					setState(197);
					match(T__6);
					setState(198);
					varValue();
					}
					}
					setState(203);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(204);
				match(T__4);
				setState(205);
				varName();
				setState(206);
				match(T__5);
				setState(207);
				compoundTypes();
				setState(208);
				array();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
